--- a/spa/css/spa.css
+++ b/spa/css/spa.css
@@ -3,21 +3,46 @@
  * Root namespace styles
  */
 
+/** Begin Reset */
 * {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
+h1, h2, h3, h4, h5, h6, p { margin-bottom: 10px; }
+ol, ul, dl { list-style-position: inside; }
+/** End Reset */
+
+/** Begin standard selectors */
 body {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  background-color: #777;
+  font: 13px 'Trebuchet MS', Verdana, Helvetica, Arial, sans-serif;
+  color: #444;
+  background-color: #888;
 }
+a { text-decoration: none; }
+  a:link, a:visited { color: inherit; }
+  a:hover { text-decoration: underline; }
+strong {
+  font-weight: 800;
+  color: #000;
+}
+/** End standard selectors */
+
+/** Begin spa namespace selectors */
 #spa {
   position: absolute;
   top: 8px;
   left: 8px;
   bottom: 8px;
   right: 8px;
-  border-radius: 8px 8px 0 8px;
+
+  min-height: 500px;
+  min-width: 500px;
+  overflow: hidden;
+
+  border-radius: 0px 8px 0 8px;
   background-color: #fff;
 }
 .spa-slider {
@@ -30,3 +55,14 @@ body {
   border-radius: 8px 0 0 0;
   background-color: #f00;
 }
+/** End spa namespace selectors */
+
+/** Begin utility selectors */
+.spa-x-selectors {}
+.spa-x-clearfloat {
+  height: 0 !important;
+  float: none  !important;
+  visibility: hidden !important;
+  clear: both !important;
+}
+/** End utility selectors */
