--- a/spa/css/spa.shell.css
+++ b/spa/css/spa.shell.css
@@ -54,6 +54,7 @@
 .spa-x-closed .spa-shell-main-nav {
   width: 0;
 }
+
 .spa-shell-main-content {
   left: 250px;
   right: 0;
@@ -62,20 +63,26 @@
 .spa-x-closed .spa-shell-main-content {
   left: 0;
 }
+
 .spa-shell-foot {
   bottom: 0;
   left: 0;
   right: 0;
   height: 40px;
 }
-.spa.shell-chat {
+.spa-shell-chat {
   bottom: 0;
   right: 0;
   width: 300px;
   height: 15px;
+  cursor: pointer;
   background: red;
+  border-radius: 5px 0 0 0;
   z-index: 1;
 }
+  .spa-shell-chat:hover {
+    background: #a00;
+  }
 .spa-shell-modal {
   margin-top: -200px;
   margin-right: -200px;
