feature: func api

--- a/spa/css/spa.css
+++ b/spa/css/spa.css
@@ -11,13 +11,13 @@
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
-h1, h2, h3, h4, h5, h6, p { margin-bottom: 10px; }
+h1, h2, h3, h4, h5, h6, p { margin-bottom: 6pt; }
 ol, ul, dl { list-style-position: inside; }
 /** End Reset */
 
 /** Begin standard selectors */
 body {
-  font: 13px 'Trebuchet MS', Verdana, Helvetica, Arial, sans-serif;
+  font: 10pt 'Trebuchet MS', Verdana, Helvetica, Arial, sans-serif;
   color: #444;
   background-color: #888;
 }
@@ -33,18 +33,16 @@ strong {
 /** Begin spa namespace selectors */
 #spa {
   position: absolute;
-  top: 8px;
-  left: 8px;
-  bottom: 8px;
-  right: 8px;
-
-  min-height: 500px;
-  min-width: 500px;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: #fff;
+  min-height: 15em;
+  min-width: 35em;
   overflow: hidden;
-
-  border-radius: 0px 8px 0 8px;
-  background-color: #fff;
 }
+/*
 .spa-slider {
   position: absolute;
   bottom: 0;
@@ -55,6 +53,7 @@ strong {
   border-radius: 8px 0 0 0;
   background-color: #f00;
 }
+*/
 /** End spa namespace selectors */
 
 /** Begin utility selectors */
