--- a/spa/css/spa.shell.css
+++ b/spa/css/spa.shell.css
@@ -17,18 +17,32 @@
 }
 .spa-shell-head-logo {
   top: 4px;
-  left: 4px;
+  left: 8px;
   height: 32px;
   width: 128px;
-  background: orange;
 }
+  .spa-shell-head-logo h1 {
+    font: 800 22px/22px Arial, Helvetica, sans-serif;
+    margin: 0;
+  }
+  .spa-shell-head-logo p {
+    font: 800 10px/10px Arial, Helvetica, sans-serif;
+    margin: 0;
+  }
 .spa-shell-head-acct {
   top: 4px;
   right: 0;
-  width: 64px;
+  width: 210px;
   height: 32px;
-  background: green;
+  line-height: 32px;
+  background: #888;
+  color: #fff;
+  text-align: center;
+  cursor: pointer;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
+/*
 .spa-shell-head-search {
   top: 4px;
   right: 64px;
@@ -36,6 +50,7 @@
   height: 32px;
   background: blue;
 }
+*/
 .spa-shell-main {
   top: 40px;
   left: 0;
@@ -44,8 +59,9 @@
 }
 .spa-shell-main-content,
 .spa-shell-main-nav {
-  top: 0;
-  bottom: 0;
+  width: 400px;
+  background: #eee;
+  z-index: 1;
 }
 .spa-shell-main-nav {
   width: 250px;
@@ -56,7 +72,7 @@
 }
 
 .spa-shell-main-content {
-  left: 250px;
+  left: 400px;
   right: 0;
   background: #ddd;
 }
